[MODEXPS-177] - Updated to Java 17