@@ -16,7 +16,6 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.log4j.Log4j2;
@@ -99,7 +98,7 @@ public class JobServiceImpl implements JobService {
       result.setJobRecords(cqlService.getByCQL(Job.class, query, offset, limit)
           .stream()
           .map(JobServiceImpl::entityToDto)
-          .collect(Collectors.toList()));
+          .toList());
       result.setTotalRecords(cqlService.countByCQL(Job.class, query));
     }
     return result;
@@ -208,13 +207,13 @@ public class JobServiceImpl implements JobService {
   private List<Job> filterJobsNotMatchingExportTypes(List<Job> jobs, Set<ExportType> exportTypes) {
     return jobs.stream()
       .filter(j -> !exportTypes.contains(j.getType()))
-      .collect(Collectors.toList());
+      .toList();
   }
 
   private List<Job> filterJobsMatchingExportTypes(List<Job> jobs, Set<ExportType> exportTypes) {
     return jobs.stream()
       .filter(j -> exportTypes.contains(j.getType()))
-      .collect(Collectors.toList());
+      .toList();
   }
 
   public void deleteJobs(List<Job> jobs) {
